# net-config

./: Cargo.toml  README.md  README_CN.md  README_DEV.md
.github/workflows/: release.yml  test.yml
src/: i18n.rs  main.rs  os.rs  shared.rs
src/i18n/: detection.rs
src/os/: linux.rs  macos.rs  windows.rs
