[package]
name = "net-config"
version = "0.1.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_Globalization"
] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2.155"